# hexlet-django-blog

./: pyproject.toml  setup.cfg
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: views.py
hexlet_django_blog/article/templates/article/: another_template.html
hexlet_django_blog/templates/: about.html  base.html  index.html
